--- a/frontend/register.html
+++ b/frontend/register.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/register.css">
+
 </head>
 <body>
-<h1>Register</h1>
 
   <!-- Register form -->
   <form id="registerForm">
+    <h1>Sign up</h1>
     <input id="username" type="text" placeholder="Username" required />
     <input id="password" type="password" placeholder="Password" required />
     <button type="submit">Create account</button>
+    <p>Already have an account? <a href="login.html">Log in</a></p>
   </form>
-
-  <p>Already have an account?<a href="login.html">Log in</a></p>
 
     <script>
     // Handle register form without reloading the page
