--- a/frontend/login.html
+++ b/frontend/login.html
@@ -15,6 +15,7 @@
     <input id="username" type="text" placeholder="Username" required />
     <input id="password" type="password" placeholder="Password" required />
     <button type="submit">Sign in</button>
+    <p>Don't have an account yet? <a href="register.html">Sign up</a></p>
   </form>
 
   <script>
