--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sensor & Sensor readings app</title>
-    <link rel="stylesheet" href="./css/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body>
     <div class="welcome-card">
-        <h1>Sensor & Sensor Readings App</h1>
-        <p>
-            Welcome to the Energy Sensor platform — a simple web app that lets you 
-            register, log in and view detailed sensor readings in real time.
-        </p>
-        <p>
-            <a href="login.html" class="btn">Log in</a>
-            <a href="register.html" class="btn secondary">Create account</a>
-        </p>
+      <h1>Sensor & Sensor Readings App</h1>
+      <p>
+        Welcome to the Energy Sensor platform — a simple web app that lets you
+        register, log in and view detailed sensor readings in real time.
+      </p>
+      <p>
+        <a href="login.html" class="btn">Log in</a>
+        <a href="register.html" class="btn secondary">Create account</a>
+      </p>
     </div>
-</body>
+  </body>
 </html>
