--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,59 +1,61 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign in</title>
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/login.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/login.css" />
+  </head>
+  <body>
+    <!-- Login form -->
+    <form id="loginForm">
+      <h1>Sign in</h1>
+      <input id="username" type="text" placeholder="Username" required />
+      <input id="password" type="password" placeholder="Password" required />
+      <button type="submit">Sign in</button>
+      <p>Don't have an account yet? <a href="register.html">Sign up</a></p>
+    </form>
 
-  <!-- Login form -->
-  <form id="loginForm">
-    <h1>Sign in</h1>
-    <input id="username" type="text" placeholder="Username" required />
-    <input id="password" type="password" placeholder="Password" required />
-    <button type="submit">Sign in</button>
-    <p>Don't have an account yet? <a href="register.html">Sign up</a></p>
-  </form>
+    <script>
+      // Handle login form without reloading the page
+      document
+        .getElementById("loginForm")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
 
-  <script>
-     // Handle login form without reloading the page
-    document.getElementById('loginForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-     
-      // Get values from input fields
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+          // Get values from input fields
+          const username = document.getElementById("username").value;
+          const password = document.getElementById("password").value;
 
-      try {
-        // Send POST request to Django API for authentication
-        const res = await fetch(`http://localhost:8000/api/auth/token?username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`, {
-          method: 'POST'
+          try {
+            // Send POST request to Django API for authentication
+            const res = await fetch(
+              `http://localhost:8000/api/auth/token?username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`,
+              {
+                method: "POST",
+              }
+            );
 
+            // Check if response is successful
+            if (!res.ok) {
+              const text = await res.text();
+              throw new Error(text || "Login failed");
+            }
+            // Parse respons and get the token
+            const data = await res.json();
+            if (!data.token) throw new Error("No token in response");
+
+            // Store token
+            localStorage.setItem("token", data.token);
+
+            alert("Login successful!");
+            // Redirect to sensors page
+            location.href = "sensors.html";
+          } catch (err) {
+            alert("Error: " + err.message);
+          }
         });
-
-        // Check if response is successful
-        if (!res.ok) {
-          const text = await res.text();
-          throw new Error(text || 'Login failed');
-        }
-        // Parse respons and get the token
-        const data = await res.json();
-        if (!data.token) throw new Error('No token in response');
-
-        // Store token
-        localStorage.setItem('token', data.token);
-
-        alert('Login successful!');
-        // Redirect to sensors page
-        location.href = 'sensors.html';
-      } catch (err) {
-        alert('Error: ' + err.message);
-      }
-    });
-  </script>
-
-</body>
+    </script>
+  </body>
 </html>
