--- a/frontend/sensor.html
+++ b/frontend/sensor.html
@@ -50,8 +50,9 @@
           id="hum"
           type="number"
           step="0.1"
-          placeholder="Humidity"
-          required
+          min="0"
+          max="100"
+          placeholder="Humidity (optional)"
         />
         <input id="ts" type="datetime-local" required />
         <button type="submit" class="btn">Add</button>
@@ -210,7 +211,8 @@
           const sensorId = getSensorId();
 
           const temperature = parseFloat(document.getElementById("temp").value);
-          const humidity = parseFloat(document.getElementById("hum").value);
+          const humValue = document.getElementById("hum").value;
+          const humidity = humValue === "" ? null : parseFloat(humValue);
           const tsLocal = document.getElementById("ts").value;
           // Convert local date/time to ISO 8601
           const timestamp = new Date(tsLocal).toISOString();
